@@ -1,6 +1,6 @@
 Package: RProtoBuf
-Version: 0.4.25.1
-Date: 2026-02-08
+Version: 0.4.25.2
+Date: 2026-02-28
 Authors@R: c(person("Romain", "Francois", role = "aut",
                     comment = c(ORCID = "0000-0002-2444-4226")),
              person("Dirk", "Eddelbuettel", role = c("aut", "cre"), email = "edd@debian.org",
